// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 20.79172382001754,
        "borderWidth": 1.8748172966652428,
        "elevation": 0,
        "flexDirection": "row",
        "height": 67.28344314272223,
        "justifyContent": "center",
        "width": 67.28344314272223,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "flex",
            "fontSize": 33.64172157136112,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 12.849997751343574,
            "color": "#aaa",
            "display": "flex",
            "fontSize": 20.79172382001754,
            "left": 12.849997751343574,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#323031",
        "borderColor": "#323031",
        "borderRadius": 20.79172382001754,
        "borderWidth": 1.8748172966652428,
        "elevation": 3.033454386004363,
        "flexDirection": "row",
        "height": 67.28344314272223,
        "justifyContent": "center",
        "width": 67.28344314272223,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fefefe",
            "display": "flex",
            "fontSize": 33.64172157136112,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 12.849997751343574,
            "color": "#fefefe",
            "display": "flex",
            "fontSize": 20.79172382001754,
            "left": 12.849997751343574,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 20.79172382001754,
        "borderWidth": 0,
        "elevation": 0,
        "flexDirection": "row",
        "height": 67.28344314272223,
        "justifyContent": "center",
        "width": 67.28344314272223,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fefefe",
          "borderColor": "#aaa",
          "borderRadius": 20.79172382001754,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 67.28344314272223,
          "justifyContent": "center",
          "width": 67.28344314272223,
        }
      }
    />
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Explore mode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 20.79172382001754,
        "borderWidth": 1.8748172966652428,
        "elevation": 0,
        "flexDirection": "row",
        "height": 67.28344314272223,
        "justifyContent": "center",
        "width": 67.28344314272223,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "flex",
            "fontSize": 33.64172157136112,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 12.849997751343574,
            "color": "#aaa",
            "display": "flex",
            "fontSize": 20.79172382001754,
            "left": 12.849997751343574,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Quiz mode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 20.79172382001754,
        "borderWidth": 1.8748172966652428,
        "elevation": 0,
        "flexDirection": "row",
        "height": 67.28344314272223,
        "justifyContent": "center",
        "width": 67.28344314272223,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "none",
            "fontSize": 33.64172157136112,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 12.849997751343574,
            "color": "#aaa",
            "display": "none",
            "fontSize": 20.79172382001754,
            "left": 12.849997751343574,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
